@@ -26,7 +26,7 @@
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (setup.py reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.8.0+svn20061216"
+__version__   = "0.8.0+svn20061216-ik"
 __date__      = "2006-12-16"
 __copyright__ = "Copyright (c) 2005-2006 %s. All rights reserved." % __author__
 __licence__   = "GPL"
